<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/personal_profile"/>
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_local_mall_black_24dp"
            android:title="@string/items_catalog"
            android:checked="true"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/my_orders"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/my_notifications"/>
    </group>
</menu>