<?xml version="1.0" encoding="utf-8"?>
<com.testography.am_mvp.ui.screens.product.ProductView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/product_card"
            style="@style/CustomCard.ProductCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_name_txt"
                    style="@style/ProductText.ProductTitle"
                    android:text="@string/sample_item"/>

                <TextView
                    android:id="@+id/product_description_txt"
                    style="@style/ProductText.ProductDescription"
                    android:text="@string/lorem_ipsum"/>

                <!-- TODO: aspectRatio ImageView -->

                <com.testography.am_mvp.utils.AspectRatioImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small_8"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medial_24">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ProductText.LabelPrice"
                            android:text="@string/quantity"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:contentDescription="@string/dummy_content_description"
                                android:id="@+id/minus_btn"
                                style="@style/CountBtn"
                                android:src="@drawable/ic_remove_black_24dp"/>

                            <TextView
                                android:id="@+id/product_count_txt"
                                style="@style/ProductText.ValuePrice"
                                android:text="@string/sample_quantity"/>

                            <ImageButton
                                android:contentDescription="@string/dummy_content_description"
                                android:id="@+id/plus_btn"
                                style="@style/CountBtn"
                                android:src="@drawable/ic_add_black_24dp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ProductText.LabelPrice"
                            android:text="@string/price"/>

                        <TextView
                            android:id="@+id/product_price_txt"
                            style="@style/ProductText.ValuePrice"
                            android:text="@string/sample_price"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</com.testography.am_mvp.ui.screens.product.ProductView>