<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/product_description_card"
                style="@style/CustomCard.ProductDescription"
                android:layout_height="@dimen/product_description_card_height">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingTop="@dimen/spacing_normal_16">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingLeft="@dimen/spacing_normal_16"
                        android:paddingRight="@dimen/spacing_normal_16"
                        android:paddingTop="@dimen/spacing_normal_16">

                        <TextView
                            android:id="@+id/product_name_txt"
                            style="@style/ProductText.ProductTitle"
                            android:layout_marginBottom="@dimen/spacing_normal_16"
                            android:text="@string/sample_item"/>

                        <TextView
                            android:id="@+id/product_description_txt"
                            style="@style/ProductText.ProductDetailsDescription"
                            android:text="@string/lorem_ipsum"/>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/spacing_medial_24">

                        <RatingBar
                            android:id="@+id/rating_bar_description"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:numStars="5"
                            android:rating="3.5"
                            android:stepSize="0.5"/>

                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/product_qty_price_card"
                style="@style/CustomCard.ProductDescription"
                android:layout_height="@dimen/product_qty_price_card_height">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_normal_16">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ProductText.LabelPrice"
                            android:text="@string/quantity"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/minus_btn"
                                style="@style/CountBtn"
                                android:contentDescription="@string/dummy_content_description"
                                android:src="@drawable/ic_remove_black_24dp"/>

                            <TextView
                                android:id="@+id/product_count_txt"
                                style="@style/ProductText.ValuePrice"
                                android:text="@string/sample_quantity"/>

                            <ImageButton
                                android:id="@+id/plus_btn"
                                style="@style/CountBtn"
                                android:contentDescription="@string/dummy_content_description"
                                android:src="@drawable/ic_add_black_24dp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ProductText.LabelPrice"
                            android:text="@string/price"/>

                        <TextView
                            android:id="@+id/product_price_txt"
                            style="@style/ProductText.ValuePrice"
                            android:text="@string/sample_price"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_bottom_space"
        android:layout_marginRight="@dimen/fab_right_space"
        android:clickable="true"
        app:rippleColor="@color/colorPrimaryDark"
        android:src="@drawable/ic_favorite_white_24dp"/>
</android.support.design.widget.CoordinatorLayout>